# physical-quoridor

./: Cargo.toml  README.md  _t.py  physical_quoridor-0.1.0-cp312-cp312-win_amd64.whl  physical_quoridor-0.1.0-cp313-cp313-win_amd64.whl  physical_quoridor-0.1.0-py3-none-manylinux_2_5_x86_64.manylinux1_x86_64.whl  pyproject.toml  train.py  train_with_ray.py  x.py
game/: .gitignore  play.py  replay.py
physical-quoridor/: .gitignore  Cargo.toml  _t  _t.ps1  _t.py  pyproject.toml
physical-quoridor/python/physical_quoridor/: env.py
physical-quoridor/src/: interop.rs  lib.rs
physical-quoridor/src/interop/: javascript.rs  python.rs
play/: play.py
python-samples/: do_nothing_player.py  player.py  random_fence_player.py  random_player.py  sample_player.py  shortest_path_player.py  strict_shortest_path_player.py  utility.py
python/physical_quoridor/: __init__.py  env.py  physical_quoridor.cp312-win_amd64.pyd  physical_quoridor.cp313-win_amd64.pyd
reinforcement-learning (failure)/: README.md  env.py  evaluate.py  requirements.txt  train.py
reinforcement-learning (failure)/checkpoints/004800/: algorithm_state.pkl  class_and_ctor_args.pkl
reinforcement-learning(failed)/: train.py
sample-players/: do_nothing_player.py  player.py  random_player.py  sample_player.py  shortest_path_player.py  strict_shortest_path_player.py
src/: lib.rs
src/interop/: python.rs
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  main.js
web/src/components/: ActionsLog.vue  ControlPanel.vue  GameBoard.vue
(+15 files in other folders)
